--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -3,6 +3,9 @@ global:
   evaluation_interval: 15s
 
 scrape_configs:
- - job_name: prometheus
+  - job_name: prometheus
     static_configs:
       - targets: ['localhost:9090']
+  - job_name: node
+    static_configs:
+      - targets: ['node-exporter-svc.monitoring.svc.cluster.local']
