--- a/prometheus/pod.yml
+++ b/prometheus/pod.yml
@@ -5,7 +5,6 @@ metadata:
   labels:
     app: prometheus-pod
   name: prometheus-pod
-  namespace: monitoring
 spec:
   replicas: 1
   selector:
@@ -18,10 +17,16 @@ spec:
       labels:
         app: prometheus-pod
     spec:
+      volumes:
+        - name: prometheus-config-volume
+          configMap:
+            name: prometheus-config
       containers:
       - image: prom/prometheus
         name: prometheus
         ports:
         - containerPort: 9090
-        resources: {}
-status: {}
+        volumeMounts:
+          - name: prometheus-config-volume
+            mountPath: /etc/prometheus/prometheus.yml
+            subPath: prometheus.yml
