--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -3,9 +3,21 @@ global:
   evaluation_interval: 15s
 
 scrape_configs:
-  - job_name: prometheus
-    static_configs:
-      - targets: ['localhost:9090']
-  - job_name: node
-    static_configs:
-      - targets: ['node-exporter-svc.monitoring.svc.cluster.local']
+  - job_name: kubernetes-nodes-cadvisor
+    scrape_interval: 10s
+    scrape_timeout: 10s
+    scheme: https
+    tls_config:
+      ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+    bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+    kubernetes_sd_configs:
+      - role: node
+    relabel_configs:
+      - action: labelmap
+        regex: __meta_kubernetes_node_label_(.+)
+      - target_label: __address__
+        replacement: kubernetes.default.svc:443
+      - source_labels: [__meta_kubernetes_node_name]
+        regex: (.+)
+        target_label: __metrics_path__
+        replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
