--- a/common/prometheus-cluster-role.yml
+++ b/common/prometheus-cluster-role.yml
@@ -6,6 +6,10 @@ rules:
 - apiGroups: [""]
   resources:
   - nodes
+  - nodes/proxy
+  - services
+  - endpoints
+  - pods
   verbs: ["get", "list", "watch"]
 - apiGroups:
   - extensions
