--- a/prometheus/configmap.yml
+++ b/prometheus/configmap.yml
@@ -6,6 +6,12 @@ data:
       evaluation_interval: 15s
 
     scrape_configs:
+      - job_name: 'kube-state-metrics'
+        static_configs:
+          - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
+      - job_name: 'node-exporter'
+        static_configs:
+          - targets: ['node-exporter-svc.monitoring.svc.cluster.local']
       - job_name: kubernetes-nodes-cadvisor
         scrape_interval: 10s
         scrape_timeout: 10s
